生成优化报告文件，改进了dll存放路径